# github-issue-tracker

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml  tests.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
gissues/: apps.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
gissues/extensions/: utils.py
gissues/extensions/auth/: apps.py  models.py  urls.py
gissues/extensions/auth/api/: views.py
gissues/extensions/auth/migrations/: 0001_initial.py  0002_initial.py  0002_userrepositoryfollow_and_more.py  0003_userrepositoryfollow_created_at_and_more.py
gissues/extensions/github/: apps.py  dataclasses.py  models.py  transformers.py  urls.py  views.py
gissues/extensions/github/api/: serializers.py  views.py
gissues/extensions/github/migrations/: 0001_initial.py  0002_alter_historicalissue_number_alter_issue_number_and_more.py  0002_remove_historicalissuecommentbody_created_at_and_more.py
gissues/extensions/github_client/: apps.py  client.py  tasks.py
gissues/extensions/github_client/api/: views.py
gissues/extensions/rest_framework/: apps.py  urls.py
gissues/extensions/rest_framework/api/: views.py
gissues/extensions/tests/: settings.py  test_github_client.py
gissues/tests/: conftest.py  factories.py  settings.py
gissues/tests/integration/: test_auth_views.py  test_github_views.py  test_rest_framework_views.py  test_views.py
gissues/tests/unit/: test_auth_models.py  test_github_client.py  test_github_client_views.py  test_github_models.py  test_github_transformers.py  test_utils.py
