[tool.poetry]
name = "github-issue-tracker"
version = "0.1.0"
description = ""
authors = ["Ömer Faruk Korkmaz <omarfarukkorkmazz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
djangorestframework = "^3.15.1"
psycopg2 = "^2.9.9"
celery = "^5.3.6"
django-filter = "^24.2"
envanter = "^1.2.1"
redis = "^5.0.3"
requests = "^2.31.0"
django-extensions = "^3.2.3"
ipython = "^8.23.0"
pre-commit = "^3.7.0"
mypy = "^1.9.0"
django-stubs = "^4.2.7"
pytest-django = "^4.8.0"

[tool.ruff]
fix = true
show-fixes = true
target-version = "py312"
line-length = 120

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true

[tool.django-stubs]
django_settings_module = "gissues.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gissues.test.settings"
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
