[tool.poetry]
name = "github-issue-tracker"
version = "0.1.0"
description = ""
authors = ["Ömer Faruk Korkmaz <omarfarukkorkmazz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.11"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
celery = "^5.3.6"
django-filter = "^24.2"
envanter = "^1.2.1"
redis = "^5.0.3"
requests = "^2.31.0"
django-extensions = "^3.2.3"
ipython = "^8.23.0"
pre-commit = "^3.7.0"
mypy = "^1.9.0"
django-stubs = "^4.2.7"
pytest-django = "^4.8.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
django-simple-history = "^3.5.0"
pytest-factoryboy = "^2.7.0"
black = "^24.4.0"
isort = "^5.13.2"
drf-nested-routers = "^0.93.5"
django-debug-toolbar = "^4.3.0"
drf-spectacular = "^0.27.2"
djangorestframework-stubs = "^3.14.5"
flower = "^2.0.1"
pytest-xdist = "^3.5.0"

[tool.ruff]
fix = true
show-fixes = true
target-version = "py311"
line-length = 120
exclude = ["migrations"]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
exclude = ["test"]

[tool.django-stubs]
django_settings_module = "gissues.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gissues.tests.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = ["--cov=gissues", "--cov-report=term-missing", "--cov-report=html", "--junitxml=test-reports/junit.xml", "--ds=gissues.tests.settings", "--numprocesses=auto"]

[tool.coverage.report]
omit = ["*migrations*", "*tests*", "asgi.py", "wsgi.py", "manage.py", "*urls*", "settings.py"]

[tool.black]
line-length = 120
exclude = '''
/(
  | migrations
)/
'''

[tool.isort]
profile = "black"
known_django = "django"
known_rest_framework = "rest_framework"
sections = "FUTURE,STDLIB,DJANGO,REST_FRAMEWORK,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
combine_as_imports = true
line_length = 120
skip_glob = ["**/migrations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
